@@ -48,7 +48,7 @@ M18 (Turn off steppers after a build.)
 		<bookend start="machines/thingomatic/start.gcode" end="machines/thingomatic/end+DC.gcode"/>		
 	</machine>
 	<machine>
-		<name>Thingomatic w/ HBP and Extruder MK6 (5D)</name>
+		<name>Thingomatic w/ HBP and Extruder MK6 (Volumetric)</name>
 		<geometry type="cartesian">
 			<!-- different pulleys on X and Y axii -->
 			<axis id="x" length="106" maxfeedrate="4000" homingfeedrate="2500" stepspermm="47.069852" endstops="min"/>  <!-- Pulley dia: 10.82mm / 1/8 step = 1/(10.82 * pi / 1600) -->
@@ -170,7 +170,7 @@ M18 (Turn off steppers after a build.)
 		<bookend start="machines/thingomatic/start+HBP+Stepstruder.gcode" end="machines/thingomatic/end+Stepstruder.gcode"/>		
 	</machine>
 <machine>
-		<name>Thingomatic w/ HBP and Stepstruder MK7 (5D)</name>
+		<name>Thingomatic w/ HBP and Stepstruder MK7 (Volumetric)</name>
 		<geometry type="cartesian">
 			<!-- different pulleys on X and Y axii -->
 			<axis id="x" length="106" maxfeedrate="4000" homingfeedrate="2500" stepspermm="47.069852" endstops="min"/>  <!-- Pulley dia: 10.82mm / 1/8 step = 1/(10.82 * pi / 1600) -->
