@@ -16,7 +16,7 @@ dimension	False
 drill	False
 export	False
 feed	False
-fill	True
+fill	False
 fillet	False
 flow	False
 home	False
@@ -33,7 +33,7 @@ outline	False
 outset	False
 preface	False
 raft	False
-reversal	False
+reversal	True
 speed	False
 splodge	False
 stretch	False
